<resources>
    <string name="app_name">DB Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="phone">Phone</string>
    <string name="phone_et">Phone Number</string>
    <string name="msg">Message</string>
    <string name="msg_et">Your Message</string>
    <string name="close">Close</string>
    <string name="read">Read</string>
    <string name="write">Write</string>

</resources>

