<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailsFragment">

    <TextView
        android:id="@+id/phone2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/phone"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd2"
        app:layout_constraintStart_toStartOf="@id/guidelineStart2"
        app:layout_constraintTop_toTopOf="@id/guidelineTop2" />

    <TextView
        android:id="@+id/phone_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@id/guidelineStart2"
        app:layout_constraintTop_toBottomOf="@id/phone2" />

    <TextView
        android:id="@+id/msg2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/msg"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd2"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@id/guidelineStart2"
        app:layout_constraintTop_toBottomOf="@id/phone_value" />

    <TextView
        android:id="@+id/msg_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@id/guidelineStart2"
        app:layout_constraintTop_toBottomOf="@id/msg2" />

    <Button
        android:id="@+id/close2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/writebtn"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/readbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@id/guidelineStart2"
        app:layout_constraintTop_toBottomOf="@id/msg_value"
        app:layout_constraintEnd_toStartOf="@id/writebtn"/>

    <Button
        android:id="@+id/writebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/write"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="@id/readbtn"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd2"
        app:layout_constraintStart_toEndOf="@id/readbtn"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>